Migrate to version 3.4

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
+Version 3.4.0 - 2014-11-03
 * Add Lot Sequence field in product.template and product.category and use them
   to calculate the number of lot.
   Priority is template's sequence -> category -> general configuration
